# adk_samples

./: .gitignore  README.md
customer_service/: agent.py
email_triage_agent/: .env.example  README.md  pyproject.toml
email_triage_agent/email_triage_agent/: __init__.py  agent.py  prompts.py  tools.py
legal_case_assistant_agent/: .env.template  .gitignore  README.md  main.py  pyproject.toml
legal_case_assistant_agent/legal_case_assistant_agent/: __init__.py  agent.py  prompts.py  requirements.txt  tools.py
legal_case_assistant_agent/mcp-toolbox/: .env.template  tools.yaml
python/agents/weather_eats_agent/: .env.example  pyproject.toml
python/agents/weather_eats_agent/weather_eats_agent/: prompts.py
resend_mcp_server/: README.md  server.js
weather_eats_agent/: .env.template  .gitignore  README.md  pyproject.toml
weather_eats_agent/weather_eats_agent/: agent.py  prompts.py
